# aws-organizations-mcp-server

./: .gitignore  .rules  README.md  main.py  pyproject.toml  server.py
documents/: design.md
src/aws_organizations_mcp/: __init__.py  config.py  server.py
src/aws_organizations_mcp/services/: __init__.py  organizations.py
src/aws_organizations_mcp/tools/: __init__.py  health_tools.py  scp_tools.py
