[project]
name = "aws-organizations-mcp-server"
version = "0.1.0"
description = "AWS Organizations Service Control Policy (SCP) analysis MCP Server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.38.36",
    "mcp[cli]>=1.9.4",
]
authors = [
    {name = "chittai", email = "chittai1221@gmail.com"}
]
keywords = ["aws", "organizations", "scp", "mcp", "service-control-policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/chittai/aws-organizations-mcp-server"
Repository = "https://github.com/chittai/aws-organizations-mcp-server"
Documentation = "https://github.com/chittai/aws-organizations-mcp-server/blob/main/README.md"
Issues = "https://github.com/chittai/aws-organizations-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

# AWS公式MCPサーバと同様の設定
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
